--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Transcations
 spring.datasource.url=jdbc:mysql://localhost:3306/transactions?autoReconnect=true
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
-spring.datasource.username=xxxx
-spring.datasource.password=xxxx
+spring.datasource.username=root
+spring.datasource.password=yukino2002
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
 log4j.logger.org.hibernate.SQL=debug 
