--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,4 @@ log4j.logger.org.hibernate.SQL=debug
 log4j.logger.org.hibernate.type=trace
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+server.port=8090
